--- a/themes/codi-ng/layouts/partials/header.html
+++ b/themes/codi-ng/layouts/partials/header.html
@@ -11,4 +11,13 @@
         </a>
         {{ end }}
     </nav>
+    <div clas="socials">
+      <ul>
+        <li>{{ partial "fontawesome.html" "github" }}</li>
+        <li>{{ partial "fontawesome.html" "instagram" }}</li>
+        <li>{{ partial "fontawesome.html" "linkedin" }}</li>
+        <li>{{ partial "fontawesome.html" "twitter" }}</li>
+        <li>{{ partial "fontawesome.html" "youtube" }}</li>
+      </ul>
+    </div>
 </div>
