--- a/themes/codi-ng/layouts/partials/header.html
+++ b/themes/codi-ng/layouts/partials/header.html
@@ -11,13 +11,31 @@
         </a>
         {{ end }}
     </nav>
-    <div clas="socials">
-      <ul>
-        <li>{{ partial "fontawesome.html" "github" }}</li>
-        <li>{{ partial "fontawesome.html" "instagram" }}</li>
-        <li>{{ partial "fontawesome.html" "linkedin" }}</li>
-        <li>{{ partial "fontawesome.html" "twitter" }}</li>
-        <li>{{ partial "fontawesome.html" "youtube" }}</li>
-      </ul>
+    <div class="socials">
+      <div>
+        <a href="https://github.com/codihuston">
+          {{ partial "fontawesome.html" "github" }}
+        </a>
+      </div>
+      <div>
+        <a href="https://www.instagram.com/codihuston">
+          {{ partial "fontawesome.html" "instagram" }}
+        </a>
+      </div>
+      <div>
+        <a href="https://www.linkedin.com/in/codi-huston">
+          {{ partial "fontawesome.html" "linkedin" }}
+        </a>
+      </div>
+      <div>
+        <a href="https://twitter.com/codingwithcodi">
+          {{ partial "fontawesome.html" "twitter" }}
+        </a>
+      </div>
+      <div>
+        <a href="https://www.youtube.com/@codingwithcodi">
+          {{ partial "fontawesome.html" "youtube" }}
+        </a>
+      </div>
     </div>
 </div>
