--- a/themes/codi-ng/layouts/partials/header.html
+++ b/themes/codi-ng/layouts/partials/header.html
@@ -3,7 +3,7 @@
         {{ range .Site.Menus.main }}
         <a class="nav-link" href="{{ .URL }}">
         {{ if .Pre }}
-        {{ $icon := printf "<i data-feather=\"%s\"></i> " .Pre | safeHTML }}
+        {{ $icon := partial "fontawesome.html" .Pre | safeHTML }}
         {{ $icon }}
         {{ end }}
         {{ $text := print .Name | safeHTML }}
