WIP Style post lists

--- a/themes/codi-ng/layouts/_default/list.html
+++ b/themes/codi-ng/layouts/_default/list.html
@@ -1,12 +1,17 @@
 {{ define "main" }}
 <h1>{{ .Title }}</h1>
 {{ range .Pages.ByPublishDate.Reverse }}
-<p>
-    <h3><a class="title" href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
-    {{ partial "metadata.html" . }}
-    <a class="summary" href="{{ .RelPermalink }}">
-        <p>{{ .Summary }}</p>
-    </a>
-</p>
+<div class="row mb-2">
+    <div class="col-md-3">
+      <img src="/images/nagoya-castle.jpg" class="img-fluid" alt="Responsive image">
+    </div>
+    <div class="col-md-9">
+      <h3><a class="title" href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
+      {{ partial "metadata.html" . }}
+      <a class="summary" href="{{ .RelPermalink }}">
+          <p>{{ .Summary }}</p>
+      </a>
+    </div>
+</div>
 {{ end }}
 {{ end }}
