Add image partial / shortcode
- Shortcode cannot be used in layout templates, thus to recycle a shortcode across templates and posts (markdown), you must put the shortcode in a partial and wrap it with a shortcode. Then you call the shortcode in markdown, or the partial in the template
- Specify width OR height to scale and maintain aspect ratio
- Can specify classes, such as `img-fluid` to make image responsive (bootstrap)
- This partial / shortcode will keep payloads smaller than the source image

--- a/themes/codi-ng/layouts/_default/list.html
+++ b/themes/codi-ng/layouts/_default/list.html
@@ -4,7 +4,13 @@
 <div class="row mb-2">
     <div class="col-md-3">
       {{ if .Params.Thumbnail }}
-      <img src="/images/{{ .Params.Thumbnail }}" class="img-fluid" alt="Responsive image">
+      {{ .Scratch.Set "Height" "150" }}
+      {{ .Scratch.Set "Width" "" }}
+      {{ .Scratch.Set "Class" "img-fluid" }}
+      {{ .Scratch.Set "Src" (printf "%s%s" "/images/" .Params.Thumbnail) }}
+      {{ .Scratch.Set "Title" "Some title" }}
+      {{ .Scratch.Set "Alt" "Some Alt Text" }}
+      {{ partial "img.html" . }}
       {{ end }}
     </div>
     <div class="col-md-9">
