--- a/themes/codi-ng/static/css/style.css
+++ b/themes/codi-ng/static/css/style.css
@@ -2,6 +2,19 @@ body {
   padding: 0
 }
 
+article {
+  font-family: Merriweather;
+  line-height: 1.8;
+  color: #222222;
+  font-size: 1.2em;
+}
+
+.dot:after {
+  content: "\00B7";
+  margin-left: 3px;
+  margin-right: 3px;
+}
+
 a.no-style:link {
   text-decoration: inherit;
   color: inherit;
