Add email to socials

--- a/themes/codi-ng/layouts/partials/header.html
+++ b/themes/codi-ng/layouts/partials/header.html
@@ -9,6 +9,11 @@
   </nav>
   <div class="socials">
     <div>
+      <a href="mailto:{{$.Site.Params.email}}" class="no-style">
+        {{ partial "fontawesome.html" "envelope" }} Email
+      </a>
+    </div>
+    <div>
       <a href="https://github.com/codihuston" class="no-style">
         {{ partial "fontawesome.html" "github" }} GitHub
       </a>
