Add sticky footer

--- a/themes/codi-ng/layouts/partials/footer.html
+++ b/themes/codi-ng/layouts/partials/footer.html
@@ -1,1 +1,5 @@
-<p class="footer text-center">Copyright {{ site.Copyright }} {{ now.Format "2006"}}</p>
+<footer class="footer mt-auto">
+  <div class="container">
+    <p class="footer text-center">Copyright {{ site.Copyright }} {{ now.Format "2006"}}</p>
+  </div>
+</footer>
