--- a/themes/codi-ng/layouts/_default/baseof.html
+++ b/themes/codi-ng/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html class="h-100">
     {{- partial "head.html" . -}}
-    <body class="container">
+    <body class="container d-flex flex-column h-100">
         {{- partial "header.html" . -}}
         <div id="content">
         {{- block "main" . }}{{- end }}
