--- a/themes/codi-ng/layouts/_default/single.html
+++ b/themes/codi-ng/layouts/_default/single.html
@@ -19,6 +19,7 @@
         <div class="col-lg-2"></div>
       </div>
     </div>
+    {{ partial "paypal.html" . }}
   </article>
 </main>
 {{ end }}
