Update landing and about pages

--- a/themes/codi-ng/layouts/index.html
+++ b/themes/codi-ng/layouts/index.html
@@ -1,68 +1,38 @@
 {{ define "main" }}
 <div>
-  <div id="home-jumbotron" class="jumbotron text-center">
-    <h2 class="title">Welcome!</h1>
-      <div class="mw-25">
-        <div class="center-block">
-          <img src="/images/me-and-fuji.jpg" class="img-fluid" alt="Me and Mt. Fuji">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8">
+        <div id="home-jumbotron" class="jumbotron text-center">
+          <h2 class="title">Coding With Codi</h1>
+            <div class="mw-25">
+              <div class="center-block">
+                <img src="/images/me-and-fuji.jpg" class="img-fluid" width="730" height="548" alt="Me and Mt. Fuji">
+              </div>
+            </div>
+          <p class="lead">
+            Welcome to my blog! I'm Codi Huston!
+          </p>
+          <p class="">
+            In this blog, we will talk about my experiences as a software
+            engineer, which covers a wide range of topics such as: full-stack
+            web development, containerization (Docker, Podman, CNCF),
+            Kubernetes, OpenShift, DevOps, GitOps, Software Design, Software
+            Architecture, Networking, Systems Administration, and much, much
+            more!
+          </p>
+          <p>
+            I invite you to join me on this exciting journey as we explore the
+            intersection of technology, security, and the joys of life beyond
+            the digital realm. Let's dive deep into discussions and tutorials
+            on how to use these everyday technologies. It is my hope that these
+            musings will help us all grow and thrive in this rapidly
+            evolving industry, whether you are a junior engineer or beyond.
+          </p>
         </div>
       </div>
-  </div>
-  <p>
-    I'm Codi Huston, a passionate software engineer with a focus on
-    containerization, Kubernetes, and DevOps. With a background in Computer
-    Science, I embarked on my professional journey in 2015 immediately after
-    graduating.
-  </p>
-  <p>
-    For six fulfilling years, I honed my skills as a web developer and systems
-    administrator for a public university. This experience not only deepened
-    my understanding of technology but also instilled in me a strong
-    appreciation for the power of efficient systems and secure infrastructure.
-    During my tenure, my fascination with containerization and its potential
-    for revolutionizing software deployment grew. As I delved further into
-    the world of DevOps, I began exploring the challenges of securing secrets
-    in containerized environments. This exploration led me to an exciting
-    opportunity at CyberArk (specifically
-    <a href="https://github.com/cyberark/conjur">Conjur</a>) in 2019, where I
-    continue to work today.
-  </p>
-  <p>
-    With a genuine passion for teaching and sharing knowledge, I am dedicated
-    to providing you with the tools and insights needed to excel in your career.
-    From coding fundamentals to industry trends, this blog will equip you with
-    the essential skills to thrive in the ever-evolving world of software
-    engineering. Together, we'll navigate the challenges, conquer imposter
-    syndrome, and pave the way for your success as a software engineer.
-    Let's dive in and unlock your full potential!
-  </p>
-  <p>
-    I invite you to join me on this exciting journey as we explore the
-    intersection of technology, security, and the joys of life beyond the
-    digital realm. Let's dive deep into discussions, tutorials, and musings
-    that will help us all grow and thrive in this rapidly evolving world.
-  </p>
-  <h2>Outside of Work...</h3>
-  <p>
-    Beyond my professional pursuits, I have a zest for life outside the realm
-    of technology. Music has always been a source of inspiration and relaxation
-    for me, and I love discovering new obsure artists. Traveling is a newfound
-    passion of mine, having been blessed with the opportunity to see Japan with
-    my partner and his brother. Traveling provides me with fresh perspectives
-    and the chance to explore different cultures.
-  </p>
-  <p>
-    In my free time, I also enjoy tinkering with my homelab, experimenting with
-    new technologies, and building personal projects that allow me to push the
-    boundaries of what I've learned. This blog will serve as a platform for me
-    to share my experiences, insights, and discoveries in the ever-evolving
-    landscape of technology, security, and personal interests.
-  </p>
-  <div class="">
-    <img src="/images/me-and-sakura-street.jpg" class="img-fluid" alt="Me and Sakura Street">
-  </div>
-  <div class="">
-    <img src="/images/itsukushima-shrine-torii-gate.jpg" class="img-fluid" alt="Itsukushima Shrine Torii Gate">
+    </div>
   </div>
 </div>
 {{ end }}
