--- a/themes/codi-ng/layouts/index.html
+++ b/themes/codi-ng/layouts/index.html
@@ -14,22 +14,7 @@
           <p class="lead">
             Welcome to my blog! I'm Codi Huston!
           </p>
-          <p class="">
-            In this blog, we will talk about my experiences as a software
-            engineer, which covers a wide range of topics such as: full-stack
-            web development, containerization (Docker, Podman, CNCF),
-            Kubernetes, OpenShift, DevOps, GitOps, Software Design, Software
-            Architecture, Networking, Systems Administration, and much, much
-            more!
-          </p>
-          <p>
-            I invite you to join me on this exciting journey as we explore the
-            intersection of technology, security, and the joys of life beyond
-            the digital realm. Let's dive deep into discussions and tutorials
-            on how to use these everyday technologies. It is my hope that these
-            musings will help us all grow and thrive in this rapidly
-            evolving industry, whether you are a junior engineer or beyond.
-          </p>
+          {{ .Content }}
         </div>
       </div>
     </div>
