--- a/themes/codi-ng/layouts/page/about.html
+++ b/themes/codi-ng/layouts/page/about.html
@@ -3,10 +3,12 @@
     {{- partial "head.html" . -}}
     <body class="container d-flex flex-column h-100">
         {{- partial "header.html" . -}}
-        <div id="content" class="row">
-          <div class="col-lg-2"></div>
-          <div class="col-lg-8">
-            {{ .Content }}
+        <div id="content" class="container">
+          <div class="row">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8">
+              {{ .Content }}
+            </div>
           </div>
         </div>
         {{- partial "footer.html" . -}}
