Center images from partial

--- a/themes/codi-ng/layouts/partials/img.html
+++ b/themes/codi-ng/layouts/partials/img.html
@@ -1,4 +1,4 @@
-<p>
+<p class="text-center">
   {{ $image := resources.Get (.Scratch.Get "Src") }}
   {{ $targetWidth := (.Scratch.Get "Width") }}
   {{ $targetHeight := (.Scratch.Get "Height") }}
