Add recent 3 posts to index page

--- a/themes/codi-ng/layouts/index.html
+++ b/themes/codi-ng/layouts/index.html
@@ -18,6 +18,9 @@
         </div>
       </div>
     </div>
+    <div>
+      {{ partial "recent-posts.html" . }}
+    </div>
   </div>
 </div>
 {{ end }}
