--- a/themes/codi-ng/layouts/_default/list.html
+++ b/themes/codi-ng/layouts/_default/list.html
@@ -1,23 +1,6 @@
 {{ define "main" }}
 <h1>{{ .Title }}</h1>
 {{ range .Pages.ByPublishDate.Reverse }}
-<div class="row mb-2">
-    <div class="col-md-3">
-      {{ if .Params.Thumbnail }}
-      {{ .Scratch.Set "Height" "400" }}
-      {{ .Scratch.Set "Width" "" }}
-      {{ .Scratch.Set "Class" "img-fluid" }}
-      {{ .Scratch.Set "Src" (printf "%s%s" "/images/" .Params.Thumbnail) }}
-      {{ .Scratch.Set "Title" "Some title" }}
-      {{ .Scratch.Set "Alt" "Some Alt Text" }}
-      {{ partial "img.html" . }}
-      {{ end }}
-    </div>
-    <div class="col-md-9">
-      <h3><a class="title" href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
-      {{ partial "metadata.html" . }}
-      <em><p>{{ .Summary }}</p><em></em>
-    </div>
-</div>
+{{ partial "post-list-item.html" . }}
 {{ end }}
 {{ end }}
