Add tag aggregates
- All tags and the number of posts they're associated with are now aggregated and displayed for easy filtering
- When filtering by tags, posts are displayed using the partial created earlier

--- a/themes/codi-ng/layouts/_default/list.html
+++ b/themes/codi-ng/layouts/_default/list.html
@@ -1,6 +1,14 @@
 {{ define "main" }}
-<h1>{{ .Title }}</h1>
-{{ range .Pages.ByPublishDate.Reverse }}
-{{ partial "post-list-item.html" . }}
-{{ end }}
+<div class="end-of-section">
+  <div class="row">
+    <div class="col-lg-2">
+    </div>
+    <div class="col-lg-8">
+      <h1>{{ .Title }}</h1>
+      {{ range .Pages.ByPublishDate.Reverse }}
+      {{ partial "post-list-item.html" . }}
+      {{ end }}
+    </div>
+  </div> 
+</div>
 {{ end }}
