--- a/themes/codi-ng/layouts/partials/post-list-item.html
+++ b/themes/codi-ng/layouts/partials/post-list-item.html
@@ -13,6 +13,6 @@
   <div class="col-md-9">
     <h3><a class="title" href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
     {{ partial "metadata.html" . }}
-    <em><p>{{ .Summary }}</p><em></em>
+    <em><p>{{ .Summary }}</p></em>
   </div>
 </div>
