--- a/themes/codi-ng/layouts/index.html
+++ b/themes/codi-ng/layouts/index.html
@@ -1,26 +1,27 @@
 {{ define "main" }}
 <div>
   <div class="container">
-    <div class="row">
+    <div class="row end-of-section">
       <div class="col-lg-2"></div>
       <div class="col-lg-8">
-        <div id="home-jumbotron" class="jumbotron text-center">
+        <div id="home-jumbotron" class="jumbotron">
           <h2 class="title">Coding With Codi</h1>
             <div class="mw-25">
               <div class="center-block">
                 <img src="/images/me-and-fuji.jpg" class="img-fluid" width="730" height="548" alt="Me and Mt. Fuji">
               </div>
             </div>
-          <p class="lead">
+          <p class="lead text-center">
             Welcome to my blog! I'm Codi Huston!
           </p>
           {{ .Content }}
+          <div class="text-center">
+            {{ partial "tag-aggregates.html" . }}
+          </div>
         </div>
       </div>
     </div>
-    <div>
-      {{ partial "recent-posts.html" . }}
-    </div>
+    {{ partial "recent-posts.html" . }}
   </div>
 </div>
 {{ end }}
