--- a/themes/codi-ng/layouts/partials/header.html
+++ b/themes/codi-ng/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<div id="nav-border" class="container">
+<div id="nav-border" class="container end-of-section">
   <nav id="nav" class="nav justify-content-center">
     {{ range .Site.Menus.main }}
     <a class="nav-link" href="{{ .URL }}">
