--- a/themes/codi-ng/layouts/partials/header.html
+++ b/themes/codi-ng/layouts/partials/header.html
@@ -1,4 +1,5 @@
 <div id="nav-border" class="container end-of-section">
+  {{ partial "socials.html" }}
   <nav id="nav" class="nav justify-content-center">
     {{ range .Site.Menus.main }}
     <a class="nav-link" href="{{ .URL }}">
@@ -7,42 +8,4 @@
     </a>
     {{ end }}
   </nav>
-  <div class="socials">
-    <div>
-      <a href="mailto:{{$.Site.Params.email}}" class="no-style">
-        <span class="">{{ partial "fontawesome.html" "envelope" }}</span>
-        <span class="d-none d-md-inline">Email</span>
-      </a>
-    </div>
-    <div>
-      <a href="https://github.com/codihuston" class="no-style">
-        <span class="">{{ partial "fontawesome.html" "github" }}</span>
-        <span class="d-none d-md-inline">GitHub</span>
-      </a>
-    </div>
-    <div>
-      <a href="https://www.instagram.com/codihuston" class="no-style">
-        <span class="">{{ partial "fontawesome.html" "instagram" }}</span>
-        <span class="d-none d-md-inline">Instagram</span>
-      </a>
-    </div>
-    <div>
-      <a href="https://www.linkedin.com/in/codi-huston" class="no-style">
-        <span class="">{{ partial "fontawesome.html" "linkedin" }}</span>
-        <span class="d-none d-md-inline">LinkedIn</span>
-      </a>
-    </div>
-    <div>
-      <a href="https://twitter.com/codingwithcodi" class="no-style">
-        <span class="">{{ partial "fontawesome.html" "twitter" }}</span>
-        <span class="d-none d-md-inline">Twitter</span>
-      </a>
-    </div>
-    <div>
-      <a href="https://www.youtube.com/@codingwithcodi" class="no-style">
-          <span class="">{{ partial "fontawesome.html" "youtube" }}</span>
-          <span class="d-none d-md-inline">YouTube</span>
-      </a>
-    </div>
-  </div>
 </div>
