Restyle nav and socials

--- a/themes/codi-ng/layouts/page/about.html
+++ b/themes/codi-ng/layouts/page/about.html
@@ -3,7 +3,7 @@
     {{- partial "head.html" . -}}
     <body class="container d-flex flex-column h-100">
         {{- partial "header.html" . -}}
-        <div id="content" class="container">
+        <div class="content container">
           <div class="row">
             <div class="col-lg-2"></div>
             <div class="col-lg-8">
