--- a/themes/codi-ng/layouts/_default/baseof.html
+++ b/themes/codi-ng/layouts/_default/baseof.html
@@ -3,8 +3,8 @@
     {{- partial "head.html" . -}}
     <body class="container d-flex flex-column h-100">
         {{- partial "header.html" . -}}
-        <div id="content">
-        {{- block "main" . }}{{- end }}
+        <div class="content container">
+          {{- block "main" . }}{{- end }}
         </div>
         {{- partial "footer.html" . -}}
         {{- partial "script.html" . -}}
