--- a/themes/codi-ng/layouts/partials/author.html
+++ b/themes/codi-ng/layouts/partials/author.html
@@ -1,4 +1,4 @@
-<div class="row author">
+<div class="row author end-of-section">
   <div class="col-md-2 text-center text-md-start">
   <a href="{{ .Site.BaseURL }}">
   <img alt=""
