--- a/themes/codi-ng/layouts/page/about.html
+++ b/themes/codi-ng/layouts/page/about.html
@@ -3,14 +3,14 @@
     {{- partial "head.html" . -}}
     <body class="container d-flex flex-column h-100">
         {{- partial "header.html" . -}}
-        <div class="content container">
+        <article class="content container">
           <div class="row">
             <div class="col-lg-2"></div>
             <div class="col-lg-8">
               {{ .Content }}
             </div>
           </div>
-        </div>
+        </article>
         {{- partial "footer.html" . -}}
         {{- partial "script.html" . -}}
     </body>
