Fix landing page font

--- a/themes/codi-ng/layouts/index.html
+++ b/themes/codi-ng/layouts/index.html
@@ -11,10 +11,12 @@
                 <img src="/images/me-and-fuji.jpg" class="img-fluid" width="730" height="548" alt="Me and Mt. Fuji">
               </div>
             </div>
-          <p class="lead text-center">
-            Welcome to my blog! I'm Codi Huston!
-          </p>
-          {{ .Content }}
+          <article>
+            <p class="lead text-center">
+              Welcome to my blog! I'm Codi Huston!
+            </p>
+            {{ .Content }}
+          </article>
           <div class="text-center">
             <div class="end-of-section">
               <h3>Categories</h3>
