--- a/themes/codi-ng/layouts/partials/recent-posts.html
+++ b/themes/codi-ng/layouts/partials/recent-posts.html
@@ -4,7 +4,7 @@
     </div>
     <div class="col-lg-8">
       <h2 class="text-center">Recent Posts</h2>
-      {{ range first 3 (where .Site.RegularPages "Type" "posts") }}
+      {{ range first 3 ($.Site.GetPage "taxonomyTerm" "blog").Pages.ByPublishDate.Reverse }}
       {{ partial "post-list-item.html" . }}
       {{ end }}
     </div>
