--- a/themes/codi-ng/static/css/style.css
+++ b/themes/codi-ng/static/css/style.css
@@ -132,3 +132,49 @@ a.no-style:visited {
   border: 2px solid black;
   width: 100%;
 }
+
+/*
+Copy button
+
+Had to change the path to the code block.
+
+Source: Aaron Luna: https://codepen.io/a-luna/pen/JjYrejL
+*/
+.highlight-wrapper {
+  display: block;
+}
+
+.highlight {
+  position: relative;
+  z-index: 0;
+  padding: 0;
+  margin: 0;
+  border-radius: 4px;
+}
+
+.copy-code-button {
+  position: absolute;
+  z-index: 2;
+  right: 0;
+  top: 0;
+  font-size: 0.8rem;
+  font-weight: 700;
+  line-height: 14px;
+  width: 80px;
+  color: #232326;
+  background-color: #FFFF00;
+  border: 1.25px solid #232326;
+  border-radius: 4px; 
+  padding: 0.5rem;
+  cursor: pointer;
+  opacity: 0.75;
+}
+
+.copy-code-button:hover,
+.copy-code-button:focus,
+.copy-code-button:active,
+.copy-code-button:active:hover {
+  color: #222225;
+  background-color: #b3b3b3;
+  opacity: 0.8;
+}
