--- a/themes/codi-ng/layouts/partials/post-list-item.html
+++ b/themes/codi-ng/layouts/partials/post-list-item.html
@@ -1,4 +1,4 @@
-<div class="row mb-2">
+<div class="row mb-2 post-list-item">
   <div class="col-md-5">
     <a class="title" href="{{ .RelPermalink }}">
       {{ if .Params.Thumbnail }}
@@ -12,8 +12,8 @@
       {{ end }}
     </a>
   </div>
-  <div class="col-md-7">
-    <h3><a class="title" href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
+  <div class="col-md-7 post-item-description">
+    <h3><a class="title no-style post-item-header" href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
     <p>
       <em>{{ .Summary }}</em>
     </p>
