--- a/themes/codi-ng/static/css/style.css
+++ b/themes/codi-ng/static/css/style.css
@@ -124,6 +124,20 @@ a.no-style:visited {
   background: linear-gradient(90deg, rgba(63,61,194,1) 0%, rgba(102,100,206,1) 50%);
 }
 
+.post-list-item {
+  border: 1px solid rgba(0,0,0,.1);
+  border-radius: 2px;
+  padding-left: 0;
+}
+
+.post-item-description {
+  padding: 1rem;
+}
+
+.post-item-header {
+  color: #222;
+}
+
 .highlight > div {
   display: inline-block;
   padding: 1em 1em 1em 1em;
